configs/all-clusters/whereami-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: whereami-frontend-virtualservice-external
    namespace: whereami
spec:
    hosts:
    - "test.endpoints.${PROJECT_ID}.cloud.goog"
    gateways:
    - asm-gateways/asm-ingress-gateway-xlb
    http:
    - route:
        - destination:
            host: whereami-frontend
            port:
              number: 80
